@@ -1,3 +1,8 @@
+2009-01-31 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Turn SpellChecker, Hyphenator and GrammarChecker into
+	  singletons.
+
 2009-01-04 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add option for preventing hyphenation of unknown
